Bug fixes cattery show page and contact form

--- a/app/javascript/stylesheets/modules/home.scss
+++ b/app/javascript/stylesheets/modules/home.scss
@@ -340,6 +340,7 @@
       }
   
       .info-title {
+        font-size: 0.9em;
         width: auto;
         width: 1px;
         padding-right: 5px;
@@ -347,6 +348,7 @@
       }
   
       .info-text {
+        font-size: 1.1em;
         text-align: left;
       }
     }
