--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,11 +1,11 @@
-<%= form_with(url: {:controller => locals[:controller], :action => locals[:action]}, method: "GET") do |f| %>
+<%= form_with(url: {:controller => locals[:controller], :action => locals[:action]}, method: "GET", html: {autocomplete: "off"}) do |f| %>
   <div class="row">
     <div class="col s10 offset-s1 ml5 l4 offset-l1">
       <div class="input-field">
         <button class="reset-dropdown circle">
           <i class="material-icons">restore</i>
         </button>
-        <%= f.select(:breeds, options_for_select(@all_available_breeds_array), {disabled: "", prompt: t('select.which_breeds_are_you_looking_for')}, {multiple: true, class:"form-filter", autocomplete:"off"}) %>
+        <%= f.select(:breeds, options_for_select(@all_available_breeds_array), {disabled: "", prompt: t('select.which_breeds_are_you_looking_for')}, {multiple: true, class:"form-filter"}) %>
       </div>
     </div>
     <div class="col s10 offset-s1 ml5 offset-ml1 l4 offset-l2">
@@ -13,7 +13,7 @@
         <button class="reset-dropdown circle">
           <i class="material-icons">restore</i>
         </button>
-        <%= f.select(:locations, options_for_select(@all_available_locations_array), {disabled: "", prompt: t('select.which_locations_do_you_prefer')}, {multiple: true, class:"form-filter", autocomplete:"off"}) %>
+        <%= f.select(:locations, options_for_select(@all_available_locations_array), {disabled: "", prompt: t('select.which_locations_do_you_prefer')}, {multiple: true, class:"form-filter"}) %>
       </div>
     </div>
   </div>
