--- a/app/views/breeds/_search.html.erb
+++ b/app/views/breeds/_search.html.erb
@@ -1,11 +1,11 @@
-<%= form_with(url: {:controller => locals[:controller], :action => locals[:action]}, method: "GET") do |f| %>
+<%= form_with(url: {:controller => locals[:controller], :action => locals[:action]}, method: "GET", html: {autocomplete: "off"}) do |f| %>
   <div class="row">
     <div class="col s10 offset-s1 m8 offset-m2 ml8 offset-ml2 l6 offset-l3">
       <div class="input-field">
         <button class="reset-dropdown circle">
           <i class="material-icons">restore</i>
         </button>
-        <%= f.select(:breeds_filter, options_for_select(@all_available_breeds_array), {disabled: "", prompt: t('select.which_breeds_are_you_looking_for')}, {multiple: true, class:"form-filter icons", autocomplete:"off"}) %>
+        <%= f.select(:breeds_filter, options_for_select(@all_available_breeds_array), {disabled: "", prompt: t('select.which_breeds_are_you_looking_for')}, {multiple: true, class:"form-filter icons"}) %>
       </div>
     </div>
   </div>
