--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,34 +51,38 @@
     <div class="container">
       <div class="row">
         <h1><%= t('home.new_kittens') %></h1>
-        <% @kittens.each do |cat| %>
-          <div class="col s10 offset-s1 m6 l3">
-            <%= link_to cat_path(cat) do %>
-              <div class="card">
-                <div class="card-image">
-                  <%= image_tag(cat.card_picture, alt:"#{Breed.find(cat.breed_id).name} kitten") %>
-                  <% if !cat.name.blank? %>
-                    <span class="card-title"><%= cat.name %></span>
-                  <% end %>
-                </div>
-                <div class="card-content">
-                  <table>
-                    <tbody>
-                      <tr class="info-block">
-                        <td class="info-title"><%= t('breed', count: 1)%>:</td>
-                        <td class="info-text"><%= t("breeds.#{cat_breed(cat).breed_code}.name") %></td>
-                      </tr>
-                      <tr class="info-block">
-                        <td class="info-title"><%= t('cat_info.gender')%>:</td>
-                        <td class="info-text"><%= cat_gender(cat).capitalize %></td>
-                      </tr>
-                      <tr class="info-block">
-                          <td class="info-title"><%= t('cat_info.cattery')%>:</td>
-                          <td class="info-text"><%= cattery(cat).cattery_name %></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
+        <% @kittens.each_slice(2) do |slice| -%>
+          <div class="index-row">
+            <% slice.each do |cat| %>
+              <div class="col s10 offset-s1 m6 ml6 l3">
+                <%= link_to cat_path(cat) do %>
+                  <div class="card">
+                    <div class="card-image">
+                      <%= image_tag(cat.card_picture, alt:"#{Breed.find(cat.breed_id).name} kitten") %>
+                      <% if !cat.name.blank? %>
+                        <span class="card-title"><%= cat.name %></span>
+                      <% end %>
+                    </div>
+                    <div class="card-content">
+                      <table>
+                        <tbody>
+                          <tr class="info-block">
+                            <td class="info-title"><%= t('breed', count: 1)%>:</td>
+                            <td class="info-text"><%= t("breeds.#{cat_breed(cat).breed_code}.name") %></td>
+                          </tr>
+                          <tr class="info-block">
+                            <td class="info-title"><%= t('cat_info.gender')%>:</td>
+                            <td class="info-text"><%= cat_gender(cat).capitalize %></td>
+                          </tr>
+                          <tr class="info-block">
+                              <td class="info-title"><%= t('cat_info.cattery')%>:</td>
+                              <td class="info-text"><%= cattery(cat).cattery_name %></td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                <% end %>
               </div>
             <% end %>
           </div>
