--- a/app/views/users/show.js.erb
+++ b/app/views/users/show.js.erb
@@ -2,14 +2,45 @@ function ReplacePairsWithParentsFilter(pairs) {
   var pairsContainer = $('#pairs');
   if ($('#litters_filter').val() == "" || $('#litters_filter').val() == null) {
     $(pairsContainer).html(pairs).hide().fadeIn(400);
-    $('.tabs').tabs({swipeable: true});
+
+    // Immediately initialize tabs to prevent all pictures being shown on top of each other
+    $('.tabs').tabs({swipeable: true})
+
+     // Set the tab intializer and event in a timeout so we're sure the cards are already faded in 
+     setTimeout(function() {
+     $('.tabs').tabs({swipeable: true})
+     // Switch tabs when clicking on pair card image
+      $('.card .tabs-content').on('click', function(e) {
+
+      // Get the properties and instance of the tabs
+      var card = $(this).closest('.card');
+      var elem = $(card).find('.tabs');
+      var instance = M.Tabs.getInstance(elem);
+
+      var tabs = $(card).find('.tab');
+      var tabIndex = instance.index;
+      var totalTabs = elem.length;
+
+      if (tabIndex == totalTabs) {
+        var tabId = $(tabs[0]).find('a').attr('href');
+      }
+
+      else {
+        var tabId = $(tabs[tabIndex+1]).find('a').attr('href');
+      }
+
+      // Trigger a click on one of the tabs when clicking on the image
+      var selector = "a[href|='" + tabId + "']";
+      $(selector)[0].click();
+    });
+     }, 400);
   }
 }
 
 function ReplaceLittersWithParentsFilter(litters) {
   if ($('#litters_filter').val() == "" || $('#litters_filter').val() == null) {
     var littersContainer = $('#litters');
-    $(littersContainer).html(litters).hide().fadeIn(400);
+    $(littersContainer).html(litters);
 
     // Close select when clicking or tapping on the first disabled option
     function closeSelectOnDisabledOption(e) {
