--- a/app/javascript/stylesheets/base/base.scss
+++ b/app/javascript/stylesheets/base/base.scss
@@ -46,3 +46,17 @@ a {
 .container {
   margin: 0 auto;
 }
+
+.card {
+  .card-image {
+    max-width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
