--- a/app/javascript/stylesheets/modules/footer.scss
+++ b/app/javascript/stylesheets/modules/footer.scss
@@ -17,6 +17,13 @@ main {
   }
 }
 
+// IE11: Hide the footer if it renders inside the form for some reason
+.form, .container {
+  .page-footer {
+    display: none;
+  }
+}
+
 .footer-title {
   font-size: 1.2em;
   font-weight: bold;
