--- a/app/javascript/stylesheets/modules/index.scss
+++ b/app/javascript/stylesheets/modules/index.scss
@@ -55,7 +55,6 @@
   }    
 }
 
-
 // Breeds index
 .breeds-index {
   .card {
@@ -74,6 +73,7 @@
 
       img {
         height: auto !important;
+        object-fit: cover;
       }
     }
     
