--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -212,7 +212,7 @@
             <%= link_to cat_path(cat) do %>
               <div class="card">
                 <div class="card-image">
-                  <%= image_tag(cat.thumbnail, :alt => "sibling #{Breed.find(cat.breed_id).name}") %>
+                  <%= image_tag(cat.thumbnail, :alt => "sibling #{Breed.find(cat.breed_id).name}", data: { 'object-fit': 'cover' }) %>
                   <% if !cat.name.blank? %>
                     <span class="card-title"><%= capitalized_name(cat) %></span>
                   <% end %>
