--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -58,7 +58,7 @@
                 <%= link_to cat_path(cat) do %>
                   <div class="card">
                     <div class="card-image">
-                      <%= image_tag(cat.card_picture, alt:"#{Breed.find(cat.breed_id).name} kitten") %>
+                      <%= image_tag(cat.card_picture, alt:"#{Breed.find(cat.breed_id).name} kitten", data: { 'object-fit': 'cover' }) %>
                       <% if !cat.name.blank? %>
                         <span class="card-title"><%= cat.name %></span>
                       <% end %>
