--- a/app/views/users/_cattery_kittens.html.erb
+++ b/app/views/users/_cattery_kittens.html.erb
@@ -5,19 +5,19 @@
         <div class="card">
           <div class="card-image">
             <%= link_to cat_path(cat) do %>
-              <%= image_tag(cat.thumbnail, alt:"#{Breed.find(cat.breed_id).name} kitten") %>
+              <%= image_tag(cat.thumbnail, alt:"#{Breed.find(cat.breed_id).name} kitten", data: { 'object-fit': 'cover' }) %>
               <% if !cat.name.blank? %>
                 <span class="card-title"><%= capitalized_name(cat) %></span>
-              <% end %>
-            <% end %>
-            <% if user_signed_in? && current_user == @user %>
-              <%= link_to edit_cat_path(cat, form: "kitten"), class:"btn-floating halfway-fab waves-effect waves-light btn-large" do %>
-                <i class="material-icons">edit</i>
               <% end %>
             <% end %>
           </div>
           <%= link_to cat_path(cat) do %>
             <div class="card-content">
+              <% if user_signed_in? && current_user == @user %>
+                <%= link_to edit_cat_path(cat, form: "kitten"), class:"btn-floating halfway-fab waves-effect waves-light btn-large" do %>
+                  <i class="material-icons">edit</i>
+                <% end %>
+              <% end %>
               <table> 
                 <tbody>
                   <tr class="info-block">
