--- a/app/views/users/_page_items.html.erb
+++ b/app/views/users/_page_items.html.erb
@@ -5,7 +5,7 @@
         <%= link_to cattery_path(cattery), target:"_blank" do %>
           <div class="card">
             <div class="card-image">
-              <%= image_tag(cattery_user(cattery).thumbnail, alt:"#{cattery.cattery_name} cattery") %>
+              <%= image_tag(cattery_user(cattery).thumbnail, alt:"#{cattery.cattery_name} cattery", data: { 'object-fit': 'cover' }) %>
             </div>
             <div class="card-content">
               <table>
