--- a/app/views/users/index.js.erb
+++ b/app/views/users/index.js.erb
@@ -2,6 +2,7 @@ function replaceCatteries (innerHTML) {
   var catteries = $('#catteries');
   $('.preloader-wrapper').removeClass('active');
   $(innerHTML).appendTo(catteries).hide().fadeIn(400);
+  objectFitPolyfill();
 }
 
 <% if @catteries.present? %>
