--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -7,7 +7,7 @@
     <div class="email-logo-text">Cat Linker</div>
   </div>
   <div class="email-body-container">
-    <p><%= t('mailer.hi_there') %>&nbsp;<b><%= @resource.email %></b>!</p>
+    <p><%= t('mailer.hi_there') %>&nbsp;<b><%= @resource.email[/[^@]+/].gsub('_', '.').split('.').map {|n| n.capitalize }.join(" ") %></b>!</p>
 
     <p><%= t('mailer.password.notify_password_change') %>.</p>
   </div>
