--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -7,7 +7,7 @@
     <div class="email-logo-text">Cat Linker</div>
   </div>
   <div class="email-body-container">
-    <p><%= t('mailer.hi_there') %> <b><%= @resource.email %></b>!</p>
+    <p><%= t('mailer.hi_there') %> <b><%= @resource.email[/[^@]+/].gsub('_', '.').split('.').map {|n| n.capitalize }.join(" ") %></b>!</p>
 
     <p><%= t('mailer.password.someone_requested_password_change') %>:</p>
 
