Add loading optimisations for breed index

--- a/app/views/breeds/index.html.erb
+++ b/app/views/breeds/index.html.erb
@@ -26,3 +26,7 @@
     <%= render partial: 'page_items' %>
   </div>
 </div>
+
+<div id="div_next_link">
+  <%= render partial: 'shared/next_link' %>
+</div>
