--- a/app/views/breeds/index.js.erb
+++ b/app/views/breeds/index.js.erb
@@ -1,9 +1,9 @@
 function replaceBreeds (innerHTML) {
   var breeds = $('#breeds');
   $('.preloader-wrapper').removeClass('active');
-  $(breeds).html('');
   $(innerHTML).appendTo(breeds).hide().fadeIn(400);
 }
 
 replaceBreeds("<%= j(render 'page_items')%>");
+$('#div_next_link').html("<%= j(render 'shared/next_link') %>");
 
