Added additional image resizing and loading

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
 
   <div class="row">
     <div class="col s12 m6 picture-main-container"> 
-      <%= image_tag(@user.profile_picture, alt:"profile picture", class:"picture-main z-depth-2") %>
+      <%= image_tag(@user.vertical_rectangle, alt:"profile picture", class:"picture-main z-depth-2") %>
     </div>
     <div class="col s12 m6">
       <div class="info-main">
