--- a/app/javascript/stylesheets/modules/show.scss
+++ b/app/javascript/stylesheets/modules/show.scss
@@ -545,7 +545,8 @@
       margin-top: 0px;
 
       @include small-and-down {
-        font-size: 2.3em;
+        font-size: 2.6em;
+        margin-bottom: 0px;
       }
     }
     
