--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -15,7 +15,7 @@
   </div>
   <div class="row">
     <div class="col s12 m6 picture-main-container"> 
-      <%= image_tag(@cat.card_picture, :alt => "#{Breed.find(@cat.breed_id).name} kitten", class:"picture-main z-depth-2") %>
+      <%= image_tag(@cat.vertical_rectangle, :alt => "#{Breed.find(@cat.breed_id).name} kitten", class:"picture-main z-depth-2") %>
     </div>
     <div class="col s12 m6">
       <div class="info-main">
