--- a/app/views/home/privacy_policy.html.erb
+++ b/app/views/home/privacy_policy.html.erb
@@ -45,6 +45,11 @@
         We use Google reCAPTCHA to analyse your activity to help us detect abuse such as spam and bots.
       </p>
       <p>
+        We provide an option to login with Facebook or Google ('external login'). You can use this functionality by clicking the 'Facebook login' or 'Google login' buttons on the login page.
+        After your consent, we only use the email address linked to your Facebook or Google account to create a new account for you in case an account does not yet exist that is linked to your Facebook or Google account.
+        By using one of the external logins, we also have access to the full name, username and profile picture that is linked to your Facebook or Google account, but we do not use this in the application.
+      </p>
+      <p>
         We’ll ask for your consent before using your information for a purpose that isn’t covered in this Privacy Policy.
       </p>
     </div>
