Fixed switch padding in forms and breeds index requests

--- a/app/javascript/stylesheets/modules/form.scss
+++ b/app/javascript/stylesheets/modules/form.scss
@@ -55,6 +55,10 @@
     font-size: 0.9em;
   }
 
+  .col-switch {
+    padding-left: 0px;
+  }
+
   .input-field {
     label.active {
       font-weight: bold;
