--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -46,7 +46,7 @@
       </div>
 
       <div class="row">
-        <div class="col s12">
+        <div class="col s12 col-switch">
           <div class="input-field">
             <div class="switch">
             <label class="checkbox-label">
