Update privacy policy

--- a/app/views/home/privacy_policy.html.erb
+++ b/app/views/home/privacy_policy.html.erb
@@ -1,7 +1,7 @@
 <div class="container legal-document">
   <div class="row">
     <h1>Privacy Policy</h1>
-    <h4 class="timestamp">Last updated 9 April 2020</h4>
+    <h4 class="timestamp">Last updated 1 June 2020</h4>
   </div>
   <div class="section">
     <div class="row">
@@ -47,10 +47,8 @@
       <p>
         We provide an option to login with your Facebook or Google account ("External Login"). You can use this functionality by clicking the 'Facebook login' or 'Google login' buttons on the login page.
         After your consent, we only use the email address linked to your External Login account to create a new account for you in case an account does not yet exist.
-        By using one of the External Logins, we also have access to the full name, username and profile picture that is linked to your External Login account, but we do not use this in the application.
-      </p>
-      <p>
-        We also provide functionality to share the current page on Facebook or Twitter, 
+        By using one of the External Logins, we also have access to the full name, username and profile picture, including any other personal info you've made publicly available that is linked to your External Login account.
+        We only have access to this other personal info because it comes together with your email address, but we do not store or process this information anywhere in the application.
       </p>
       <p>
         We’ll ask for your consent before using your information for a purpose that isn’t covered in this Privacy Policy.
