--- a/app/javascript/stylesheets/base/base.scss
+++ b/app/javascript/stylesheets/base/base.scss
@@ -1,18 +1,5 @@
 // Base
 @font-face {
-  font-family: "Source Sans Pro";
-  src: url('/fonts/SourceSansPro-Regular.ttf') format('truetype');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Source Sans Pro";
-  src: url('/fonts/SourceSansPro-SemiBold.ttf') format('truetype');
-  font-weight: bold;
-  font-display: swap;
-}
-
-@font-face {
   font-family: Roboto;
   src: url('/fonts/Roboto-Regular.ttf') format('truetype');
   font-display: swap;
@@ -31,7 +18,7 @@ html, body {
 
 body {
   background-color: $canvasColor;
-  font-family: Roboto, "Source Sans Pro", sans-serif;
+  font-family: Roboto, sans-serif;
   width: 100%;
 }
 
