--- a/app/javascript/stylesheets/modules/show.scss
+++ b/app/javascript/stylesheets/modules/show.scss
@@ -580,12 +580,13 @@
       width: 100%; 
       margin: 0;
 
-      /* "transparent" only works here because == rgba(0,0,0,0) */
-      background-image: linear-gradient(to bottom, transparent, $white);
-
       &:hover {
         text-decoration: underline;
       }
+    }
+
+    .truncation-link.more {
+      background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), $white);
     }
 
     .more {
