Added litters and kittens sort on birth date, set cattery input to titlecase

--- a/app/javascript/stylesheets/modules/form.scss
+++ b/app/javascript/stylesheets/modules/form.scss
@@ -56,7 +56,9 @@
   }
 
   .col-switch {
-    padding-left: 0px;
+    @include medium-and-down {
+      padding-left: 0px;
+    }
   }
 
   .input-field {
