--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
 
 <div id="cattery-view" class="container">
   <div class="row">
-    <h1><%= cattery_user(@user).cattery_name %></h1>
+    <h1><%= cattery_user(@user).cattery_name.titlecase %></h1>
   </div>
 
   <div class="row">
