--- a/app/javascript/stylesheets/modules/show.scss
+++ b/app/javascript/stylesheets/modules/show.scss
@@ -543,6 +543,8 @@
 
     h1 {
       margin-top: 0px;
+      margin-left: auto;
+      margin-right: auto;
 
       @include small-and-down {
         font-size: 2.6em;
