--- a/app/views/breeds/_breed_catteries.html.erb
+++ b/app/views/breeds/_breed_catteries.html.erb
@@ -12,7 +12,7 @@
                 <tbody>
                   <tr class="info-block">                
                     <td class="info-title"><%= t('cat_info.cattery') %>:</td>
-                    <td class="info-text"><%= cattery_user(cattery).cattery_name %></td>
+                    <td class="info-text"><%= cattery_user(cattery).cattery_name.titlecase %></td>
                   </tr>
                   <tr class="info-block">
                     <td class="info-title"><%= t('breed', count: cattery_breeds(cattery).size) %>:</td>
